# package_example

./: BUILD.bazel  WORKSPACE  go.mod
app1/: BUILD.bazel  go.mod  go.sum  main.go
liba/: go.mod
liba/formatter/: BUILD.bazel
liba/math/: BUILD.bazel  math.go
math/: math.go
